# 2023-bunnybots-ml

./: .gitignore  Dockerfile  cam.py  download.py  gather.py  pyproject.toml  requirements.txt  test.py  train.py  vast_entrypoint.sh
.github/workflows/: deploy.yaml
