[tool.poetry]
name = "2023-bunnybots-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.18"
tflite-model-maker = "^0.4.2"
numpy = "1.23.1"
pycocotools = "^2.0.7"
roboflow = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
